# -fsoft2026_1DB_4

Documentation/Diagrams/: uc3 gestor.puml  (+1 more)
Project/: CMakeLists.txt  main.cpp
Project/Dados/: camioes.txt  camionistas.txt  cargas.txt  localidades.txt  rotas.txt
Project/Headers/: Transportes.h
Project/Headers/Controller/: CamionistaController.h  GestorController.h  MenuPrincipalController.h
Project/Headers/Dtos/: CamionistaDTO.h  CargaDTO.h  RotaDTO.h
Project/Headers/Mapper/: CamiaoMapper.h  CamionistaMapper.h  CargaMapper.h  RotaMapper.h
Project/Headers/Model/: Camiao.h  CamiaoContainer.h  CamiaoDTO.h  Camionista.h  CamionistaContainer.h  CamionistaDTO.h  Camião.h  Carga.h  CargaContainer.h  Empresa.h  Localidade.h  LocalidadeContainer.h  Rota.h  RotaContainer.h  RotaDTO.h
Project/Headers/Repository/: GeneralRepository.h
Project/Headers/Service/: CamionistaService.h  GestorService.h
Project/Headers/View/: MenuCamionista.h  MenuGestor.h  MenuPrincipal.h
Project/Src/: Camionista.cpp  Transportes.cpp
Project/Src/Controller/: CamionistaController.cpp  GestorController.cpp  MenuPrincipalController.cpp
Project/Src/Model/: Camiao.cpp  CamiaoContainer.cpp  Camionista.cpp  CamionistaContainer.cpp  Carga.cpp  CargaContainer.cpp  Empresa.cpp  Localidade.cpp  LocalidadeContainer.cpp  Rota.cpp  RotaContainer.cpp
Project/Src/Repository/: GeneralRepository.cpp
Project/Src/Service/: CamionistaService.cpp  GestorService.cpp
Project/Src/View/: MenuCamionista.cpp  MenuGestor.cpp  MenuPrincipal.cpp
ProjectTester/: CMakeLists.txt
ProjectTester/Tests/: CamiaoTest.cpp  CamionistaTest.cpp  CargaTest.cpp  LocalidadeTest.cpp  RotaTest.cpp
(+18 files in other folders)
